--- a/css/addlink.css
+++ b/css/addlink.css
@@ -30,3 +30,69 @@
 .fav-menubar .sidebar-link:hover {
   background-color: rgba(255, 255, 255, 0.1);
 }
+
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+  border-radius: 15px;
+  background: linear-gradient(
+    45deg,
+    rgba(255, 255, 255, 0.1),
+    rgba(255, 255, 255, 0.3)
+  );
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+
+  margin: 15% auto;
+  padding: 20px;
+
+  width: 50%;
+}
+
+#addLinkBtn {
+  margin: 5px;
+  padding: 10px;
+  color: rgba(255, 255, 255, 0.8);
+  text-decoration: none;
+  background: linear-gradient(
+    45deg,
+    rgba(255, 255, 255, 0.1),
+    rgba(255, 255, 255, 0.3)
+  );
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+  border-radius: 5px;
+  width: 150px;
+}
+
+#addLinkBtn:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+#closeBtn {
+  margin: 5px;
+  padding: 10px;
+  color: rgba(255, 255, 255, 0.8);
+  text-decoration: none;
+  background: linear-gradient(
+    45deg,
+    rgba(255, 255, 255, 0.1),
+    rgba(255, 255, 255, 0.3)
+  );
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+  border-radius: 5px;
+  width: 15px;
+  float: right;
+}
+
+#closeBtn:hover,
+#closeBtn:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
