--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -8,12 +8,8 @@
 }
 
 .sidebar.active {
-  background: linear-gradient(
-    45deg,
-    rgba(255, 255, 255, 0.1),
-    rgba(255, 255, 255, 0.3)
-  );
-  box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+  background: linear-gradient(45deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.4));
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.8);
 }
 
 .main_todo {
